Re-modelled Routes
Re-modelled Routes to account for the new data structure in the database
