# documentation/swagger.json
@@ -37,18 +37,18 @@
                 "tags": [
                     "Dog Collar Requests"
                 ],
-                "summary": "Gets all Dog Collar Responses from the DB",
+                "summary": "Gets all the Dog Collar Responses from the DB",
                 "responses": {
                     "200": {
                         "description": "Success"
                     },
-                    "400":{
-                      "description": "Bad Request"
+                    "500":{
+                      "description": "Server side error"
                     }
                 }
             }
           },
-        "/fetch/SpecificResponseBySortKey": {
+        "/fetch/ByPartitionAndSortKeys": {
             "get": {
                 "tags": [
                     "Dog Collar Requests"
@@ -59,7 +59,7 @@
                         "in": "query",
                         "name": "Values",
                         "required": true,
-                        "description": "Cat with id",
+                        "description": "Enter a partition key and a sort key to return a specific response",
                         "schema": {
                             "type": "object",
                             "properties": {
@@ -71,8 +71,8 @@
                               }
                             },
                             "example": {
-                              "partitionKey": "abc1",
-                              "sortKey": "2"
+                              "partitionKey": "54668-30073-6ad9de2",
+                              "sortKey": "1565105507274_BARK"
                             }
                         },
                         "style": "form",
@@ -80,13 +80,16 @@
                       }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "Failed. Cat not found."
-                    }
+                  "200": {
+                      "description": "success"
+                  },
+                  "400": {
+                      "description": "valid query parameter required"
+                  },
+                  "500": {
+                    "description": "server side error"
                 }
+              }
             }
     },
     "/fetch/allByPartitionKey": {
@@ -94,13 +97,13 @@
           "tags": [
               "Dog Collar Requests"
           ],
-          "summary": "Gets a specific Dog Collar Responses from the DB",
+          "summary": "Gets all Responses from a specific collar from the DB using the Partition Key",
           "parameters": [
               {
                   "in": "query",
                   "name": "Values",
                   "required": true,
-                  "description": "Cat with id",
+                  "description": "Returns all reponses for a specific Partition Key",
                   "schema": {
                       "type": "object",
                       "properties": {
@@ -109,7 +112,7 @@
                         }
                       },
                       "example": {
-                        "partitionKey": "abc1"
+                        "partitionKey": "54668-30073-6ad9de2"
                       }
                   },
                   "style": "form",
@@ -118,40 +121,47 @@
           ],
           "responses": {
               "200": {
-                  "description": "OK"
+                  "description": "success"
               },
-              "404": {
-                  "description": "Failed. Cat not found."
-              }
+              "400": {
+                  "description": "valid query parameter required"
+              },
+              "500": {
+                "description": "server side error"
+            }
           }
       }
   },
-    "/fetch/allByBarking": {
+    "/fetch/ByPartitionAndActivity": {
       "get": {
           "tags": [
               "Dog Collar Requests"
           ],
-          "summary": "Gets a specific Dog Collar Responses from the DB",
+          "summary": "Gets all the responses for a specific Parttion Key and filters by the supplied activity type",
           "parameters": [
               {
                   "in": "query",
                   "name": "Values",
                   "required": true,
-                  "description": "Cat with id",
+                  "description": "Enter a partition key and an activity type (i.e. 'BARK', 'PHYSICAL_ACTIVITY', 'LOCATION') ",
                   "schema": {
                       "type": "object",
                       "properties": {
-                        "barking": {
+                        "partitionKey": {
+                          "type": "string"
+                        },
+                        "activityType": {
                           "type": "string",
                           "enum": [
-                            "low",
-                            "medium",
-                            "high"
+                            "BARK",
+                            "PHYSICAL_ACTIVITY",
+                            "LOCATION"
                           ]
                         }
                       },
                       "example": {
-                        "barking": "low"
+                        "partitionKey": "54668-30073-6ad9de2",
+                        "activityType": "PHYSICAL_ACTIVITY"
                       }
                   },
                   "style": "form",
@@ -159,14 +169,62 @@
                 }
           ],
           "responses": {
-              "200": {
-                  "description": "OK"
-              },
-              "404": {
-                  "description": "Failed. Cat not found."
-              }
+            "200": {
+                "description": "success"
+            },
+            "400": {
+                "description": "valid query parameter required"
+            },
+            "500": {
+              "description": "server side error"
           }
+        }
       }
+  },
+  "/fetch/allByActivityType": {
+    "get": {
+        "tags": [
+            "Dog Collar Requests"
+        ],
+        "summary": "Gets all Dog Collar Responses with the supplied activity type from the DB",
+        "parameters": [
+            {
+                "in": "query",
+                "name": "Values",
+                "required": true,
+                "description": "Returns all responses of a set activity type ('BARK', 'PHYSICAL_ACTIVITY', 'LOCATION')",
+                "schema": {
+                    "type": "object",
+                    "properties": {
+                      "activityType": {
+                        "type": "string",
+                        "enum": [
+                          "BARK",
+                          "PHYSICAL_ACTIVITY",
+                          "LOCATION"
+                        ]
+                      }
+                    },
+                    "example": {
+                      "activityType": "BARK"
+                    }
+                },
+                "style": "form",
+                "explode": "true"
+              }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          },
+          "400": {
+            "description": "valid query parameter required"
+          },
+          "500": {
+            "description": "server side error"
+          }
+        }
+    }
   },
   "/fetch/allByActivity": {
     "get": {
@@ -202,7 +260,7 @@
         ],
         "responses": {
             "200": {
-                "description": "OK"
+                "description": "success"
             },
             "404": {
                 "description": "Failed. Cat not found."
@@ -239,7 +297,7 @@
         ],
         "responses": {
             "200": {
-                "description": "OK"
+                "description": "success"
             },
             "404": {
                 "description": "Failed. Cat not found."
@@ -284,7 +342,7 @@
           },
         "responses": {
             "200": {
-                "description": "OK"
+                "description": "success"
             },
             "404": {
                 "description": "Failed. Cat not found."
@@ -325,7 +383,7 @@
           ],
           "responses": {
               "200": {
-                  "description": "OK"
+                  "description": "success"
               },
               "404": {
                   "description": "Failed. Cat not found."
